force-app/main/default/objects/RT_ImportTypeMapping__c/RT_ImportTypeMapping__c.object-meta.xml
<CustomObject>
    <label>Import Type Mapping</label>
    <nameField>
        <displayFormat>ITM-{0000}</displayFormat>
        <label>Import Type Mapping Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Import Type Mappings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>