force-app/main/default/objects/RT_ImportTypeMapping__c/fields/ImportType__c.field-meta.xml
<CustomField>
    <fullName>ImportType__c</fullName>
    <label>Import Type</label>
    <referenceTo>RT_ImportType__c</referenceTo>
    <relationshipLabel>Import Type Mappings</relationshipLabel>
    <relationshipName>Import_Type_Mappings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>