force-app/main/default/objects/RT_ImportTypeMapping__c/fields/IsFixedValue__c.field-meta.xml
<CustomField>
    <fullName>IsFixedValue__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Fixed Value?</label>
    <type>Checkbox</type>
</CustomField>