force-app/main/default/objects/RT_ImportTypeMapping__c/fields/IsIdentifier__c.field-meta.xml
<CustomField>
    <fullName>IsIdentifier__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Identifier?</label>
    <type>Checkbox</type>
</CustomField>