force-app/main/default/objects/RT_ImportTypeMapping__c/fields/ReferenceTo__c.field-meta.xml
<CustomField>
    <fullName>ReferenceTo__c</fullName>
    <label>Reference To</label>
    <length>255</length>
    <type>Text</type>
</CustomField>