force-app/main/default/objects/RT_ImportTypeMapping__c/fields/ReferenceToAPIName__c.field-meta.xml
<CustomField>
    <fullName>ReferenceToAPIName__c</fullName>
    <label>Reference To API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>