force-app/main/default/objects/RT_ImportTypeMapping__c/fields/ReferenceToFieldAPIName__c.field-meta.xml
<CustomField>
    <fullName>ReferenceToFieldAPIName__c</fullName>
    <label>Reference To Field API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>