force-app/main/default/objects/RT_ImportTypeMapping__c/fields/ReferenceToFieldName__c.field-meta.xml
<CustomField>
    <fullName>ReferenceToFieldName__c</fullName>
    <label>Reference To Field Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>