force-app/main/default/objects/RT_ImportTypeMapping__c/fields/SourceColumn__c.field-meta.xml
<CustomField>
    <fullName>SourceColumn__c</fullName>
    <label>Source Column</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>